# simple_markdown

./: .gitattributes  .gitignore  .nsis-config.json  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  SimpleMarkdown.nsi  build_on_linux.sh  build_on_win.bat  collect_dist.py  copy_qt_dlls.py  pack_on_linux.sh  pack_on_win.bat
.claude/: settings.local.json  task.md
.claude/hooks/: check_changelog.py  pre_push_check.py
.github/workflows/: build.yml
app/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  app.rc  main.cpp
claude/: task.md
debian/: rules
docs/: architecture.md  build.md  requirements.md
installer/: EasyMarkdown.nsi  SimpleMarkdown.nsi  build_installer.bat  collect_dist.py
plans/: 2026-04-13-会话恢复光标与折叠.md  2026-04-13-打包脚本自动调用编译.md  2026-04-13-拖拽无后缀文本文件.md  2026-04-13-搜索高亮亮黄色.md  2026-04-13-文档统计信息.md  2026-04-13-演示模式.md  2026-04-13-菜单栏勾选符号间距.md  2026-04-13-链接点击与导航.md  2026-04-13-预览元素缩放一致性.md  2026-04-14-Tab右键菜单禁用状态.md  2026-04-14-Tab打开文件所在目录.md  2026-04-14-行内代码垂直基线偏上.md  2026-04-15-主题目录为空时引导自定义.md  2026-04-15-图片渲染-本地与在线.md  2026-04-21-文件夹列表选中颜色调浅.md  2026-04-21-语言切换实时生效.md  2026-05-06-build脚本自动跑单元测试.md  2026-05-06-frontmatter卡片顶部贴合预览区边界.md  2026-05-06-frontmatter多行列表项对齐bug.md  2026-05-06-右键菜单非标记位置置灰取消标记.md  2026-05-06-多Tab超阈值时休眠最早文档.md  2026-05-06-标记内容与目录标记不对应.md  2026-05-06-标记应绑定段落而非全文字符偏移.md  2026-05-06-编辑区与预览区字号视觉不一致与字体族再讨论.md  2026-05-07-CHANGELOG-hook加type白名单.md  2026-05-07-CI-FontConsistencyTest-delta-4-Win失败.md  2026-05-07-编辑区预览区正文字号不一致.md  2026-05-07-预览区支持查找功能.md  2026-05-11-预览区复制保留Markdown格式.md  2026-05-11-预览编辑双区同步跳转.md  2026-05-12-A2编辑增量解析.md  2026-05-12-A3滚动同步映射缓存.md  2026-05-12-A4主线程长任务探针.md  2026-05-12-A5图片视口懒解码.md  2026-05-12-A6防抖窗口自适应.md  2026-05-12-B10错误反馈非模态化Toast.md  2026-05-12-B11TOC章节跳转快捷键.md  2026-05-12-B6粘贴URL转Markdown链接.md  2026-05-12-B7粘贴图片自动保存到本地.md  2026-05-12-B8拖拽图片到编辑器自动插入.md  (+30 more)
plans/归档/: 2026-04-13-智能补全.md  2026-04-14-Frontmatter渲染实现.md  2026-04-14-TOC下方文档信息卡.md  2026-04-14-TOC垂直对齐编辑预览.md  2026-04-14-TOC宽度自适应.md  2026-04-14-TOC支持折叠.md  2026-04-14-TOC视觉对齐薄荷清新mock.md  2026-04-14-标题栏居中显示文件名.md  2026-04-14-欢迎页国际化缺失.md  2026-04-14-行内代码垂直基线偏上.md  2026-04-15-编辑预览分隔条吸附刻度.md  2026-04-20-TOC和文件夹用TreeView.md  2026-04-21-文件夹列表选中颜色调浅.md  2026-04-21-语言切换实时生效.md  2026-04-24-ctrl-b-toggle-sidebar.md  2026-04-24-fix-plus-button-color.md  2026-04-24-fix-sidebar-show-all-init.md  2026-04-24-fix-sidetab-initial-theme.md  2026-04-24-shift-f3-反向查找已废弃.md  2026-04-27-fix-heading-wrap-overlap.md  2026-04-27-fix-list-item-extra-spacing.md  2026-04-27-fix-list-spacing-needs-zoom.md  2026-04-27-fix-preview-line-spacing.md  2026-04-27-启动最大化.md  2026-04-27-资源管理器-TOC宽度持久化已修复.md  2026-04-29-tab-splitter-state-persistence.md  2026-05-06-Windows任务管理器显示友好名而非exe名.md  2026-05-06-build脚本自动跑单元测试.md  2026-05-06-frontmatter卡片顶部贴合预览区边界.md  2026-05-06-frontmatter多行列表项对齐bug.md  2026-05-06-frontmatter超长value越框.md  2026-05-06-修正主题模板里写错的仓库地址.md  2026-05-06-内容标记持久化未实现.md  2026-05-06-千行文档拖拽分隔条预览重排卡顿.md  2026-05-06-右键菜单非标记位置置灰取消标记.md  2026-05-06-外部修改弹窗去重.md  2026-05-06-多Tab超阈值时休眠最早文档.md  2026-05-06-大文件渲染性能基线脚本.md  2026-05-06-标记内容与目录标记不对应.md  2026-05-06-标记应绑定段落而非全文字符偏移.md  (+52 more)
resources/: resources.qrc
resources/theme_docs/: HOW_TO.md  template.toml
scripts/: gen_debian_changelog.py
specs/: 00-产品愿景.md
specs/模块-app/: 04-窗口焦点管理.md  10-菜单栏样式.md  11-演示模式.md  13-分隔条吸附刻度.md  14-自动保存.md  17-性能监控.md  20-左侧面板.md  21-启动窗口几何.md  22-空白引导页.md  23-检查更新.md  README.md
specs/模块-editor/: 15-编辑滚动稳定.md  README.md
specs/模块-parser/: README.md
specs/模块-preview/: 02-布局引擎.md  03-绘制管线.md  05-图片缓存.md  07-TOC面板.md  08-内容标记.md  09-链接点击与导航.md  10-Frontmatter渲染.md  11-预览区查找.md  12-选区与拖动.md  13-复制语义.md  README.md
specs/横切关注点/: 20-坐标系统.md  40-高DPI适配.md  60-国际化.md  70-性能预算.md  80-字体系统.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  FolderPanel.cpp  FolderPanel.h  MainWindow.cpp  MainWindow.h  ShortcutsDialog.cpp  SnapSplitter.cpp  SnapSplitter.h  TabBarWithAdd.cpp  TabBarWithAdd.h  UpdateChecker.cpp  UpdateChecker.h  app.rc.in  main.cpp
src/core/: CMakeLists.txt  Document.cpp  Document.h  FontDefaults.h  LineIndex.cpp  LineIndex.h  LongTaskProbe.h  MappedFile.cpp  MappedFile.h  PerfProbe.h  PieceTable.cpp  PieceTable.h  RecentFiles.cpp  RecentFiles.h  Selection.cpp  Theme.cpp  Theme.h  UndoStack.cpp  UndoStack.h
src/editor/: CMakeLists.txt  EditorInput.cpp  EditorInput.h  EditorLayout.cpp  EditorLayout.h  EditorPainter.cpp  EditorPainter.h  EditorWidget.cpp  EditorWidget.h  SearchBar.cpp  SearchBar.h  SyntaxHighlighter.cpp  SyntaxHighlighter.h
src/parser/: CMakeLists.txt  MarkdownAst.cpp  MarkdownAst.h  MarkdownParser.cpp  MarkdownParser.h  ParseScheduler.cpp  ParseScheduler.h
src/preview/: CMakeLists.txt  CodeBlockRenderer.cpp  CodeBlockRenderer.h  ImageCache.cpp  ImageCache.h  PreviewBlockCache.cpp  PreviewBlockCache.h  PreviewLayout.cpp  PreviewLayout.h  PreviewPainter.cpp  PreviewPainter.h  PreviewWidget.cpp  PreviewWidget.h  TocPanel.cpp  TocPanel.h
tests/: CMakeLists.txt  test_Document.cpp  test_MappedFile.cpp  test_MarkdownParser.cpp  test_PieceTable.cpp  test_UndoStack.cpp  test_scenarios.py
tests/app/: FontConsistencyTest.cpp  ReloadDialogI18nTest.cpp  SnapSplitterDragFinishedTest.cpp  TabBarAddButtonVisibilityTest.cpp  UpdateCheckerVersionTest.cpp
tests/fixtures/: backtick_test.md  dpi_codeblock.md  list_alignment_test.md  marking_feature_test.md  spacing_test.md  text_selection_test.md
tests/parser/: MarkdownParserTest.cpp
tests/preview/: FrontmatterRenderTest.cpp  ImageCacheTest.cpp  PreviewBrLineBreakTest.cpp  PreviewCopyConsistencyTest.cpp  PreviewDoubleClickCellTest.cpp  PreviewDoubleClickWordTest.cpp  PreviewLayoutHeadingWrapTest.cpp  PreviewLayoutListSpacingTest.cpp  PreviewMarkingPersistenceTest.cpp  PreviewRenderBenchmark.cpp  PreviewSelectionDragTest.cpp  PreviewSelectionHeightTest.cpp  PreviewTableCellOverflowTest.cpp  PreviewTocJumpTest.cpp  TocPanelTest.cpp
tests/tests/: verification_report.json
tools/: CLAUDE.md
translations/: simple_markdown_en_US.qm  simple_markdown_en_US.ts  simple_markdown_zh_CN.qm  simple_markdown_zh_CN.ts
(+19 files in other folders)
